CircleAvatar and TextStyle with new fonts

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,17 @@ flutter:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
+  assets:
+    - images/
+
+  fonts:
+    - family: IndieFlower
+      fonts:
+       - asset: fonts/IndieFlower-Regular.ttf
+    - family: NerkoOne
+      fonts:
+        - asset: fonts/NerkoOne-Regular.ttf
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
 
