--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,13 +2,36 @@ name: Flutter CI
 
 # This workflow is triggered on pushes to the repository.
 
-on:
-  push:
-    branches:
-      - master
-# on: push # Default will running for every branch.
+on: [push, pull_request]
 
 jobs:
+  package-analysis:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: axel-op/dart-package-analyzer@v3
+        # set an id for the current step
+        id: analysis
+        with:
+          githubToken: ${{ secrets.GITHUB_TOKEN }}
+
+      # You can then use this id to retrieve the outputs in the next steps.
+      # The following step shows how to exit the workflow with an error if the total score in percentage is below 50:
+      - name: Check scores
+        env:
+          # NB: "analysis" is the id set above. Replace it with the one you used if different.
+          TOTAL: ${{ steps.analysis.outputs.total }}
+          TOTAL_MAX: ${{ steps.analysis.outputs.total_max }}
+        run: |
+          PERCENTAGE=$(( $TOTAL * 100 / $TOTAL_MAX ))
+          if (( $PERCENTAGE < 50 ))
+          then
+            echo Score too low!
+            exit 1
+          fi
+          
+  # Build APP   
   build:
     name: Build Flutter APP APK
     # This job will run on 'ubuntu virtual machine' or macos
@@ -55,13 +78,6 @@ jobs:
         with:
           name: release-apk
           path: build/app/outputs/apk/release/app-release.apk
-
-      - name: Create a Release APK
-        uses: ncipollo/release-action@v1
-        with:
-          artifacts: "build/app/outputs/apk/debug/*.apk"
-          #artifacts: "build/app/outputs/apk/debug/*.apk,build/ios/iphoneos/app.ipa"
-          token: ${{ secrets.TOKEN }}
 
   # Matrix Testing:
   test:
